add: added second model BookSchema, work with API continues
